--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zmanim to ICS Converter</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="https://openmoji.org/data/color/svg/1F5D3.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://openmoji.org/data/color/72x72/1F5D3.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://openmoji.org/data/color/618x618/1F5D3.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://openmoji.org/data/color/618x618/1F5D3.png">
+    <link rel="icon" type="image/svg+xml" href="1F5D3.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="1F5D3_color.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="1F5D3_color.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="1F5D3_color.png">
 </head>
 <body>
     <header>
@@ -58,9 +58,12 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Zmanim to ICS Converter. All rights reserved.</p>
+        <p>&copy; <span id="current-year"></span> Zmanim to ICS Converter. All rights reserved. | Created by <a href="https://thelaboratory.cc" target="_blank">The Laboratory</a></p>
     </footer>
 
     <script src="zmanim-converter.js"></script>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
