--- a/index.html
+++ b/index.html
@@ -9,53 +9,40 @@
     <link rel="icon" type="image/png" sizes="32x32" href="1F5D3_color.png">
     <link rel="icon" type="image/png" sizes="16x16" href="1F5D3_color.png">
     <link rel="apple-touch-icon" sizes="180x180" href="1F5D3_color.png">
+    <!-- Include local Hebcal API -->
+    <script src="hebcal-bundle.min.js"></script>
 </head>
 <body>
-    <header>
+    <div class="container">
         <h1>Zmanim to ICS Converter</h1>
-    </header>
-
-    <main>
-        <section id="input-section">
-            <h2>Input Location and Date Range</h2>
-            <form id="zmanim-form">
-                <div>
-                    <label for="latitude">Latitude:</label>
-                    <input type="number" id="latitude" step="0.0001" required>
-                </div>
-                <div>
-                    <label for="longitude">Longitude:</label>
-                    <input type="number" id="longitude" step="0.0001" required>
-                </div>
-                <div>
-                    <button type="button" id="get-location">Use My Current Location</button>
-                </div>
-                <div>
-                    <p>Can't find your coordinates? Try <a href="https://www.latlong.net/" target="_blank">LatLong.net</a> to find your latitude and longitude.</p>
-                </div>
-                <div>
-                    <label for="start-date">Start Date:</label>
-                    <input type="date" id="start-date" required>
-                </div>
-                <div>
-                    <label for="end-date">End Date:</label>
-                    <input type="date" id="end-date" required>
-                </div>
-                <button type="submit">Generate ICS</button>
-            </form>
-        </section>
-
-        <section id="output-section" style="display: none;">
-            <h2>Conversion Result</h2>
-            <div id="conversion-message"></div>
+        <form id="zmanim-form">
+            <div class="form-group">
+                <label for="latitude">Latitude:</label>
+                <input type="number" id="latitude" name="latitude" step="0.0001" required>
+            </div>
+            <div class="form-group">
+                <label for="longitude">Longitude:</label>
+                <input type="number" id="longitude" name="longitude" step="0.0001" required>
+            </div>
+            <button type="button" id="get-location">Use My Current Location</button>
+            <div class="form-group">
+                <label for="start-date">Start Date:</label>
+                <input type="date" id="start-date" name="start-date" required>
+            </div>
+            <div class="form-group">
+                <label for="end-date">End Date:</label>
+                <input type="date" id="end-date" name="end-date" required>
+            </div>
+            <button type="submit">Generate ICS</button>
+        </form>
+        <div id="output-section" style="display: none;">
+            <p id="conversion-message"></p>
             <button id="download-ics">Download ICS File</button>
-        </section>
-    </main>
-
+        </div>
+    </div>
     <footer>
-        <p>&copy; <span id="current-year"></span> Zmanim to ICS Converter. All rights reserved. | Created by <a href="https://thelaboratory.cc" target="_blank">The Laboratory</a></p>
+        <p>&copy; <span id="current-year"></span> Zmanim to ICS Converter. All rights reserved.</p>
     </footer>
-
     <script src="zmanim-converter.js"></script>
     <script>
         document.getElementById('current-year').textContent = new Date().getFullYear();
