--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zmanim to ICS Converter</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Favicon setup for various devices -->
     <link rel="icon" type="image/svg+xml" href="1F5D3.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="1F5D3_color.png">
     <link rel="icon" type="image/png" sizes="16x16" href="1F5D3_color.png">
@@ -15,6 +16,7 @@
 <body>
     <div class="container">
         <h1>Zmanim to ICS Converter</h1>
+        <!-- Form for user input -->
         <form id="zmanim-form">
             <div class="form-group">
                 <label for="latitude">Latitude:</label>
@@ -35,15 +37,23 @@
             </div>
             <button type="submit">Generate ICS</button>
         </form>
+        <!-- Output section (initially hidden) -->
         <div id="output-section" style="display: none;">
             <p id="conversion-message"></p>
+            <!-- Preview section for zmanim data -->
+            <div id="preview-section">
+                <h2>Preview</h2>
+                <div id="preview-content"></div>
+            </div>
             <button id="download-ics">Download ICS File</button>
         </div>
     </div>
     <footer>
         <p>&copy; <span id="current-year"></span> Zmanim to ICS Converter. All rights reserved.</p>
     </footer>
+    <!-- Include our main JavaScript file -->
     <script src="zmanim-converter.js"></script>
+    <!-- Set current year in footer -->
     <script>
         document.getElementById('current-year').textContent = new Date().getFullYear();
     </script>
