--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="1F5D3_color.png">
     <link rel="apple-touch-icon" sizes="180x180" href="1F5D3_color.png">
     <!-- Include local Hebcal API -->
-    <script src="bundle.js" defer></script>
+   <!-- <script src="bundle.js" defer></script> --> 
     <script src="bundle.min.js" defer></script>
       <!-- Include our main JavaScript file -->
     <script src="zmanim-converter.js" defer></script>
